--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
             content="Web site created using create-react-app"
             name="description"
     />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     <link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
